# ida-structor

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
bench/: bench_algorithms  bench_algorithms_debug  test_alloc  test_overlap  test_union_find
docs/: CROSS_FUNCTION_SIBLING_DISCOVERY.md  Z3_SYNTHESIS_PLAN.md  Z3_TYPE_INFERENCE.md
include/structor/: access_collector.hpp  api.hpp  call_graph.hpp  config.hpp  cross_function_analyzer.hpp  global_object_analyzer.hpp  host_integration.hpp  layout_synthesizer.hpp  naming.hpp  optimized_algorithms.hpp  pseudocode_rewriter.hpp  structor.hpp  structure_persistence.hpp  synth_types.hpp  type_fixer.hpp  type_matcher.hpp  type_propagator.hpp  ui_integration.hpp  utils.hpp  vtable_detector.hpp
include/structor/z3/: array_constraints.hpp  constraint_tracker.hpp  context.hpp  field_candidates.hpp  layout_constraints.hpp  result.hpp  test_ir.hpp  type_encoding.hpp
integration_tests/: TEST_RESULTS.md  analyze_failures.py  batch_test.idc  batch_test.py  build_fixtures.sh  check_cmake_embed_consumer.py  check_cpp_api_surface.py  check_fixture_contracts.py  check_full_integrity_suite.py  check_global_recovery_regressions.py  check_plugin.py  check_propagation.py  check_type_fixer_regressions.py  check_vtable_regressions.py  check_weaponstats_regressions.py  comprehensive_test.py  debug_nested.py  debug_propagation.py  debug_vtable.py  debug_vtable2.py  dump_struct.py  final_test.py  final_validation.py  full_suite.py  generate_fixture_contracts.py  ida_log.txt  list_funcs.py  minimal.py  run_all_tests.py  run_structor_debug.py  run_structor_synthesis.py  simple_test.py  test_alias_lifetime  test_alias_lifetime.c  test_array_of_structs  test_array_of_structs.c  test_array_of_structs_nested  test_array_of_structs_nested.c  test_bounded_index  test_bounded_index.c  (+96 more)
integration_tests/contracts/: README.md  test_alias_lifetime.json  test_array_of_structs.json  test_array_of_structs_nested.json  test_bounded_index.json  test_callback_table.json  test_callgraph_return.json  test_cross_conflict_union.json  test_enum_constants.json  test_flags_union.json  test_function_ptr.json  test_global_adjacent_objects.json  test_global_ambiguous_scratch.json  test_global_cpp_static_ctor.json  test_global_ctor_chain.json  test_global_ctor_return.json  test_global_placement_new.json  test_global_pointer_singleton.json  test_global_recursive_ctor_chain.json  test_global_split_init.json  test_global_subobject_chain.json  test_indirect_shifted_call.json  test_linked_list.json  test_local_alias_positive.json  test_mixed_access.json  test_mixed_subobject_deltas.json  test_negative_offsets.json  test_nested.json  test_nested_2d.json  test_packed_nested_array.json  test_packed_struct.json  test_packed_union_overlap.json  test_partial_overlap.json  test_pointer_constants.json  test_pointer_field_pointee.json  test_recursive_ctor_chain.json  test_shifted_siblings.json  test_simple_struct.json  test_static_local_singleton.json  test_substructure.json  (+4 more)
integration_tests/weaponstats/: SWeaponStats__Init_recreated  SWeaponStats__Init_recreated.c  SWeaponStats__Init_recreated_x86_64
integration_tests/weaponstats/ref/: SWeaponStats__Init_asm_callers0_callees5.asm  SWeaponStats__Init_dump2_callers0_callees5.c  SWeaponStats__Init_dump_callers0_callees5.c
scripts/: structor.py
src/: access_collector.cpp  cross_function_analyzer.cpp  layout_synthesizer.cpp  plugin.cpp  structure_persistence.cpp  type_propagator.cpp
src/analysis/: access_collector.cpp  cross_function_analyzer.cpp  global_object_analyzer.cpp
src/bindings/: api.cpp
src/core/: host_integration.cpp
src/synthesis/: layout_synthesizer.cpp  naming.cpp  structure_persistence.cpp  type_matcher.cpp  type_propagator.cpp
src/ui/: plugin.cpp
src/z3/: array_constraints.cpp  constraint_tracker.cpp  context.cpp  field_candidates.cpp  layout_constraints.cpp  type_encoding.cpp
test/: CMakeLists.txt  mock_ida.cpp  mock_ida.hpp  test_access_patterns.cpp  test_array_detection.cpp  test_config.cpp  test_cross_function.cpp  test_e2e_synthesis.cpp  test_embed_consumer.cpp  test_layout_constraints.cpp  test_layout_synthesizer.cpp  test_synth_types.cpp  test_type_encoding.cpp  test_vtable_detection.cpp  test_z3_context.cpp  test_z3_synthesis_integration.cpp
test/fixtures/: access_patterns.json
tools/: z3_synthesis_demo.cpp
